<resources>
    <string name="app_name">TowerDefense</string>
    <string name="readyMenu">TIENS-TOI PRET!</string>
    <string name="nicknameMenu">PSEUDO :</string>
    <string name="gameTitle">Tower Defense</string>
    <string name="scoreBoard"> SCORES</string>
    <string name="popupScore">Nombre de scores incorrectes !</string>
    <string name="popupData">Pseudo invalide !</string>
    <string name="onglet1">Menu</string>
    <string name="onglet2">Score</string>

    <string name="rankingTile">Tableau des scores</string>

    <string name="score">Score :</string>
    <string name="coins">Sous :</string>
    <string name="level">Niveau :</string>
    <string name="time">Temps :</string>

    <string name="victory">Victoire</string>
    <string name="gameOver">Perdu</string>

    <string name="tutoTitre">Comment Jouer</string>
    <string name="tutoParagraphe">TowerDefense est un jeu comme son nom l\'indique de type Tower Defense!</string>
    <string name="tutoParagraphe2">Des monstres sous forme de boule vont apparaître au fil du temps sur le chemin</string>
    <string name="tutoParagraphe3">Vous avez deux vies, chaque monstre qui termine le chemin fait perdre une vie.</string>
    <string name="tutoParagraphe4">Vous pouvez appuyer sur n\'importe quel endroit d\'herbes afin de placer une tour qui pourra tirer sur les monstres</string>
    <string name="tutoParagraphe5">Vous pouvez observer divers bouton sur votre ecran : "abandon" pour abandonner une partie en cours
    "STOP" pour mettre une partie en pause et un bouton "X1 / X2" pour changer la vitesse de la partie en cours</string>

    <string name="tutoParagraphe6">Dans le coin inférieur droit, vous observerez un indicateur de score, de temps, de niveau et d\'argent</string>
    <string name="tutoParagraphe7">Une tour coûte 25 pièces, tuer un monstre vous en rapporte deux</string>


    <!-- String pour boutons-->
    <string name="newGame">Nouvelle Partie</string>
    <string name="home">Retour</string>
    <string name="exit">Quitter</string>
    <string name="giveUp">Abandon</string>
    <string name="stop">Stop</string>
    <string name="restart">Reprendre</string>
    <string name="x2">X2</string>
    <string name="x1">X1</string>
    <string name="tuto">Comment jouer ?</string>

    <!-- String pour dialogFragment-->
    <string name="continueGame">Reprendre la partie en cours ?</string>
    <string name="yes">OUI</string>
    <string name="cancel">ANNULER</string>

</resources>